--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,41 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
+
 <body>
     <div class="all">
-    <h2>Welcome to Mini Whatsapp:</h2>
-    <form action="/chats/new" method="get">
-    <button class="btn btn-primary">Create New</button></form><br>
-    <%for(let chat of chats){%>
-     <div class="chats">
-    <p>Send By: <i><b><%=chat.from%></b></i></p>
-    <div class="msg">
-    <p><%=chat.msg%></p>
-    <form action="/chats/<%=chat._id%>/edit" method="get" id="btn">
-        <button class="btn btn-light">Edit</button>
-    </form>
-    <form action="/chats/<%=chat._id%>?_method=DELETE%>" method="post" id="btn" >
-        <button class="btn btn-light">Delete</button>
-    </form></div>
-    <p>Recieve By: <i><b><%=chat.to%></b></i></p>
-    <hr>
-    <p><%=chat.created_at.split(" ")[4]%></p>&nbsp;&nbsp;&nbsp;
-    <p><%=chat.created_at.toString().split(" ").slice(1,4).join("-")%></p>
-    </div><br><br>
-<%}%>
+        <h2>Welcome to Mini Whatsapp:</h2>
+        <form action="/chats/new" method="get">
+            <button class="btn btn-primary">Create New</button>
+        </form><br>
+        <%for(let chat of chats){%>
+            <div class="chats">
+                <p>Send By: <i><b>
+                            <%=chat.from%>
+                        </b></i></p>
+                <div class="msg">
+                    <p>
+                        <%=chat.msg%>
+                    </p>
+                    <form action="/chats/<%=chat._id%>/edit" method="get" id="btn">
+                        <button class="btn btn-light">Edit</button>
+                    </form>
+                    <form action="/chats/<%=chat._id%>?_method=DELETE%>" method="post" id="btn">
+                        <button class="btn btn-light">Delete</button>
+                    </form>
+                </div>
+                <p>Recieve By: <i><b>
+                            <%=chat.to%>
+                        </b></i></p>
+                <hr>
+                <p>
+                    <%=chat.created_at.split(" ")[4]%></p>&nbsp;&nbsp;&nbsp;
+    <p><%=chat.created_at.toString().split(" ").slice(1,4).join(" -")%>
+                </p>
+            </div><br><br>
+            <%}%>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
 
+</html>
